FIX: move floating "tutor actions" element to fix breadcrumb spacing

--- a/src/less/modules/breadcrumbs.less
+++ b/src/less/modules/breadcrumbs.less
@@ -8,7 +8,7 @@
   top:0;
   left:0;
   right:0;
-  & + div {
+  & + * {
     margin-top:60px;
   }
   li {
